--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
 /*  your css code here. If applicable */
+.container {
+	display:flex;
+    width:50vw;
+    margin: 0 auto;
+    padding: 20px;
+    border: 2px solid black;
+    border-radius: 20px;
+    text-align: center;
+	background-color:lightgray;
+  }
+
+  .block {
+    
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 10px;
+  }
+
+  .red {
+    background-color: red;
+  }
+
+  .green {
+    background-color: green;
+  }
+
+  .yellow {
+    background-color: yellow;
+  }
